--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "angular-ui-router": "^0.4.2",
     "body-parser": "^1.15.2",
     "cassandra-driver": "^3.2.0",
+    "cookie-session": "^2.0.0-beta.1",
     "crypto": "0.0.3",
     "express": "^4.14.0",
     "express-session": "^1.15.1",
